# hexagonal-arch

./: pyproject.toml
hexagonal_arch/: business.py  console.py  input_port.py  main.py  output_port.py  user.py
tests/: test_hexagonal_arch.py
